chore: detect title of project and show it
