# core/testdata/projects/streaming/expected_openapi.json
@@ -1,8 +1,13 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Auto Generated API",
-    "version": "1.0.0"
+    "description": "Generated with [docoo](https://github.com/webasoo/docoo).",
+    "title": "streaming API (Auto Generated)",
+    "version": "1.0.0",
+    "x-generated-by": {
+      "name": "docoo",
+      "url": "https://github.com/webasoo/docoo"
+    }
   },
   "paths": {
     "/download/{name}": {
